--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,7 @@ a:active {
 	margin: 0 auto;
 	padding-top: 50px;
 	padding-bottom: 200px;
+	font-size: 20px;
 }
 
 .profile_portrait {
@@ -209,6 +210,7 @@ a:active {
 	padding: 15px;
 	text-transform: uppercase;
 	font-family: var(--font-secondary);
+	font-size: 20px;
 }
 
 /* -------- Footer content --------- */
@@ -374,7 +376,10 @@ form {
 		float: none;
 		display: inline-block;
 		margin: 0 auto;
-
+	}
+	.profile {
+		margin-bottom: 170px;
+		text-align: center;
 	}
 }
 
@@ -390,7 +395,7 @@ form {
 	}
 
 	.secondary_button {
-		font-size: 12px;
+		font-size: 14px;
 	}
 }
 
