--- a/css/style.css
+++ b/css/style.css
@@ -19,407 +19,417 @@ Fonts
 Montserrat
 Lato
  */
-
- :root {
- 	--primary-color: #0f3057;
- 	--secondary-color: #008392;
- 	--third_color: #EE6064;
- 	--fourth_color: #df001c;
- 	--white: #fff;
- 	--font-main: 'Lato', san-serif;
- 	--font-secondary: 'Montserrat', san-serif;
- 	--weight-main: 400;
- 	--weight-bold: 700;
- }
+:root {
+  --primary-color: #0f3057;
+  --secondary-color: #008392;
+  --third_color: #ee6064;
+  --fourth_color: #df001c;
+  --white: #fff;
+  --font-main: 'Lato', san-serif;
+  --font-secondary: 'Montserrat', san-serif;
+  --weight-main: 400;
+  --weight-bold: 700;
+}
 
 /* ----------- Main content ------------- */
- * {
- 	-webkit-box-sizing: border-box;
- 	        box-sizing: border-box;
- }
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
 body {
-	background-color: var(--white);
-	font-family: var(--font-main);
-	font-weight: var(--weight-main);
-	font-size: 16px;
-	color: var(--primary-color);
+  background-color: var(--white);
+  font-family: var(--font-main);
+  font-weight: var(--weight-main);
+  font-size: 16px;
+  color: var(--primary-color);
 }
 
 h1 {
-	font-family: var(--font-secondary);
-	font-size: 28px;
-	font-weight: var(--weight-bold);
-	color: var(--third_color);
-	text-transform: uppercase;
+  font-family: var(--font-secondary);
+  font-size: 28px;
+  font-weight: var(--weight-bold);
+  color: var(--third_color);
+  text-transform: uppercase;
 }
 
 h2 {
-	font-family: var(--font-secondary);
-	font-size: 20px;
-	font-weight: var(--weight-bold);
+  font-family: var(--font-secondary);
+  font-size: 20px;
+  font-weight: var(--weight-bold);
 }
 
 h3 {
-	font-family: var(--font-secondary);
-	font-size: 18px;
-	font-weight: var(--weight-bold);
+  font-family: var(--font-secondary);
+  font-size: 18px;
+  font-weight: var(--weight-bold);
 }
 
 a {
-	color: var(--fourth_color);
-	text-decoration: none;
+  color: var(--fourth_color);
+  text-decoration: none;
 }
 
 a:visited {
-	color: var(--fourth_color);
-	text-decoration: none;
+  color: var(--fourth_color);
+  text-decoration: none;
 }
 
-a:hover, a:focus {
-	opacity: 0.7;
+a:hover,
+a:focus {
+  opacity: 0.7;
 }
 
 a:active {
-	color: var(--third_color);
+  color: var(--third_color);
 }
 
-.button, button {
-	border: none;
-	display: inline-block;
-	font-family: inherit;
-	background-color: var(--secondary-color);
-	color: white;
-	text-decoration: none;
-	padding: 10px;
-	border-radius: 3px;
-	border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-	-webkit-transition: 0.2s opacity;
-	transition: 0.2s opacity;
+.button,
+button {
+  border: none;
+  display: inline-block;
+  font-family: inherit;
+  background-color: var(--secondary-color);
+  color: var(--white);
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 3px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  -webkit-transition: 0.2s opacity;
+  transition: 0.2s opacity;
 }
 
-.button:hover, .button:focus, button:focus, button:hover {
-	cursor: pointer;
-	opacity: 0.8;
+.button:hover,
+.button:focus,
+button:focus,
+button:hover {
+  cursor: pointer;
+  opacity: 0.8;
 }
 
-.button:visited, button:visited {
-	color: var(--white);
+.button:visited,
+button:visited {
+  color: var(--white);
 }
 
 .main_body {
-	padding: 40px;
-	text-align: center;
-	margin: 0 50px;
+  padding: 40px;
+  text-align: center;
+  margin: 0 50px;
 }
 
 /* ----------- Header content ------------- */
 
 .navigation-list {
-	font-family: var(--font-secondary);
-	list-style-type : none;
-	font-weight: var(--weight-main);
+  font-family: var(--font-secondary);
+  list-style-type: none;
+  font-weight: var(--weight-main);
 }
 
 .navigation-list a {
-	color: var(--white);
+  color: var(--white);
 }
 
 .navigation-list li {
-	display: inline-block;
-	margin-left: 20px;
-	text-transform: uppercase;
+  display: inline-block;
+  margin-left: 20px;
+  text-transform: uppercase;
 }
 
 .navigation-list__item--active {
-	text-decoration: underline;
+  text-decoration: underline;
 }
 
 .navigation-list__item:visited {
-	color: var(--white);
+  color: var(--white);
 }
 
 .page-header {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	padding: 20px;
-	width: 100%;
-	background-color: var(--secondary-color);
-	color: var(--white);
-	
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 20px;
+  width: 100%;
+  background-color: var(--secondary-color);
+  color: var(--white);
 }
 
 .page-header_item {
-	-webkit-box-flex: 0;
-	    -ms-flex: 0 1 200px;
-	        flex: 0 1 200px;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 200px;
+  flex: 0 1 200px;
 }
 
 .page-header_item:last-child {
-	-webkit-box-flex: 1;
-	    -ms-flex-positive: 1;
-	        flex-grow: 1;
-	text-align: right;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  text-align: right;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 #header_logo {
-	height: 120px; 
-	width: auto;
+  height: 120px;
+  width: auto;
 }
 
 /* -------- Home content --------- */
 
 .profile {
-	max-width: 700px;
-	height: 350px;
-	margin: 0 auto;
-	padding-top: 50px;
-	padding-bottom: 200px;
-	font-size: 20px;
+  max-width: 700px;
+  height: 350px;
+  margin: 0 auto;
+  padding-top: 50px;
+  padding-bottom: 200px;
+  font-size: 20px;
 }
 
 .profile_portrait {
-	float: left;
-	width: 250px;
-	height: auto;
-	margin-right: 40px;
-	border-radius: 50%;
-	-webkit-box-shadow: 0 8px 12px 0 rgba(34, 60, 80, .16);
-	        box-shadow: 0 8px 12px 0 rgba(34, 60, 80, .16);
-	-webkit-transition: all ease-in-out .2s;
-	transition: all ease-in-out .2s;
+  float: left;
+  width: 250px;
+  height: auto;
+  margin-right: 40px;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 8px 12px 0 rgba(34, 60, 80, 0.16);
+  box-shadow: 0 8px 12px 0 rgba(34, 60, 80, 0.16);
+  -webkit-transition: all ease-in-out 0.2s;
+  transition: all ease-in-out 0.2s;
 }
 
 .profile_portrait:hover {
-	-webkit-box-shadow: 0 12px 16px 0 rgba(34,60,80,.16);
-	        box-shadow: 0 12px 16px 0 rgba(34,60,80,.16);
+  -webkit-box-shadow: 0 12px 16px 0 rgba(34, 60, 80, 0.16);
+  box-shadow: 0 12px 16px 0 rgba(34, 60, 80, 0.16);
 }
 
 .text-design {
-	font-weight: var(--weight-bold);
+  font-weight: var(--weight-bold);
 }
 
-
 .secondary_button {
-	color: var(--secondary-color);
-	background-color: var(--white);
-	border: 2px solid var(--secondary-color);
-	padding: 15px;
-	text-transform: uppercase;
-	font-family: var(--font-secondary);
-	font-size: 20px;
+  color: var(--secondary-color);
+  background-color: var(--white);
+  border: 2px solid var(--secondary-color);
+  padding: 15px;
+  text-transform: uppercase;
+  font-family: var(--font-secondary);
+  font-size: 20px;
 }
 
 /* -------- Footer content --------- */
 
 .page-footer {
-	clear: both;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
-	text-align: center;
-	padding: 20px 0;
+  clear: both;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  text-align: center;
+  padding: 20px 0;
 }
 
 .social-media:hover .social-media:focus {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .credits {
-	font-size: 11px;
+  font-size: 11px;
 }
 
 /* -------- About content --------- */
 
-
 table {
-	display: inline-block;
+  display: inline-block;
 }
 
 th {
-	padding: 0 10px;
+  padding: 0 10px;
 }
 
 td {
-	padding: 10px;
+  padding: 10px;
 }
 
 svg.sanantonio {
-	display: inline;
+  display: inline;
 }
 
 @-webkit-keyframes cloud-move {
-	from {
-		-webkit-transform: translate(-50px, 0);
-		        transform: translate(-50px, 0);
-	}
-	to {
-		-webkit-transform: translate(200px, 0);
-		        transform: translate(200px, 0);
-	}
+  from {
+    -webkit-transform: translate(-50px, 0);
+    transform: translate(-50px, 0);
+  }
+
+  to {
+    -webkit-transform: translate(200px, 0);
+    transform: translate(200px, 0);
+  }
 }
 
 @keyframes cloud-move {
-	from {
-		-webkit-transform: translate(-50px, 0);
-		        transform: translate(-50px, 0);
-	}
-	to {
-		-webkit-transform: translate(200px, 0);
-		        transform: translate(200px, 0);
-	}
+  from {
+    -webkit-transform: translate(-50px, 0);
+    transform: translate(-50px, 0);
+  }
+
+  to {
+    -webkit-transform: translate(200px, 0);
+    transform: translate(200px, 0);
+  }
 }
 
 .cloud-left {
-	-webkit-animation: 4s cloud-move infinite alternate linear;
-	        animation: 4s cloud-move infinite alternate linear;
+  -webkit-animation: 4s cloud-move infinite alternate linear;
+  animation: 4s cloud-move infinite alternate linear;
 }
 
 @-webkit-keyframes cloud-move-reverse {
-	from {
-		-webkit-transform: translate(0, 0);
-		        transform: translate(0, 0);
-	}
-	to {
-		-webkit-transform: translate(-200px, 0);
-		        transform: translate(-200px, 0);
-	}
+  from {
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
+  }
+
+  to {
+    -webkit-transform: translate(-200px, 0);
+    transform: translate(-200px, 0);
+  }
 }
 
 @keyframes cloud-move-reverse {
-	from {
-		-webkit-transform: translate(0, 0);
-		        transform: translate(0, 0);
-	}
-	to {
-		-webkit-transform: translate(-200px, 0);
-		        transform: translate(-200px, 0);
-	}
+  from {
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
+  }
+
+  to {
+    -webkit-transform: translate(-200px, 0);
+    transform: translate(-200px, 0);
+  }
 }
 
 .cloud-right {
-	-webkit-animation: 5s cloud-move-reverse infinite alternate linear;
-	        animation: 5s cloud-move-reverse infinite alternate linear;
+  -webkit-animation: 5s cloud-move-reverse infinite alternate linear;
+  animation: 5s cloud-move-reverse infinite alternate linear;
 }
 
 /* -------- Work content --------- */
 
 .grid_item {
-	display: inline-block;
-	width: 50%;
+  display: inline-block;
+  width: 50%;
 }
 
 @supports (display: grid) {
-.grid {
-	display: -ms-grid;
-	display: grid;
-	-ms-grid-columns: 1fr 20px 1fr 20px 1fr;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-gap: 20px;
-	margin: 0;
-}
-
+  .grid {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+    margin: 0;
+  }
 }
 
 .grid_item {
-	background-color: #f2f2f2;
-	padding: 20px;
-	width: auto;
-	min-height: auto;
-	margin: 0;
+  background-color: #f2f2f2;
+  padding: 20px;
+  width: auto;
+  min-height: auto;
+  margin: 0;
 }
 
 /* -------- Contact content -------- */
 
 label {
-	display: block;
+  display: block;
 }
 
-form input, textarea {
-	width: 250px;
+form input,
+textarea {
+  width: 250px;
 }
 
 form {
-	display: inline-block;
-	border: 2px dotted var(--primary-color);
-	padding: 10px 50px;
-}
-
-.standard_label {
-
+  display: inline-block;
+  border: 2px dotted var(--primary-color);
+  padding: 10px 50px;
 }
 
 #message {
-	width: 350px;
-	height: 125px;
+  width: 350px;
+  height: 125px;
 }
 
 /* -------- Media queries --------- */
 
 @media all and (max-width: 400px) {
-	#header_logo {
-		height: auto;
-		width: 50%;
-	}
-	form {
-		height: auto;
-		width: 100%;
-	}
-	form input, #message, svg.sanantonio {
-		height: auto;
-		width: 75%;
-	}
-	.profile_portrait {
-		float: none;
-		display: inline-block;
-		margin: 0 auto;
-	}
-	.profile {
-		margin-bottom: 170px;
-		text-align: center;
-	}
+  #header_logo {
+    height: auto;
+    width: 50%;
+  }
+
+  form {
+    height: auto;
+    width: 100%;
+  }
+
+  form input,
+  #message,
+  svg.sanantonio {
+    height: auto;
+    width: 75%;
+  }
+
+  .profile_portrait {
+    float: none;
+    display: inline-block;
+    margin: 0 auto;
+  }
+
+  .profile {
+    margin-bottom: 170px;
+    text-align: center;
+  }
 }
 
 @media all and (min-width: 500px) and (max-width: 750px) {
-	.grid {
-		-ms-grid-columns: 1fr 20px 1fr;
-		grid-template-columns: 1fr 1fr;
-	}
+  .grid {
+    -ms-grid-columns: 1fr 20px 1fr;
+    grid-template-columns: 1fr 1fr;
+  }
 
-	svg.sanantonio {
-		height: auto;
-		width: 75%;
-	}
+  svg.sanantonio {
+    height: auto;
+    width: 75%;
+  }
 
-	.secondary_button {
-		font-size: 14px;
-	}
+  .secondary_button {
+    font-size: 14px;
+  }
 }
 
 @media all and (max-width: 500px) {
-	.grid {
-		-ms-grid-columns: 1fr;
-		grid-template-columns: 1fr;
-	}
+  .grid {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
 }
 
 @media all and (max-width: 750px) {
-	.grid {
-		grid-gap: 10px;
-	}
-	.grid_item:last-child {
-		grid-column: auto/auto;
-		grid-row: auto/auto;
-	}
-	.h1 {
-		font-size: 22px
-	}
+  .grid {
+    grid-gap: 10px;
+  }
+
+  .grid_item:last-child {
+    grid-column: auto/auto;
+    grid-row: auto/auto;
+  }
+
+  .h1 {
+    font-size: 22px;
+  }
 }
