--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,6 @@ button:visited {
 }
 
 .navigation-list li {
-  display: inline-block;
   margin-left: 20px;
   text-transform: uppercase;
 }
@@ -370,15 +369,15 @@ form {
 
 /* -------- Media queries --------- */
 
-@media all and (max-width: 400px) {
+@media all and (max-width: 500px) {
   #header_logo {
     height: auto;
-    width: 100%;
+    width: 65%;
   }
 
-  form {
-    height: auto;
-    width: 100%;
+  .navigation-list li {
+    font-size: 14px;
+    margin-left: 0;
   }
 
   form input,
@@ -398,6 +397,21 @@ form {
     margin-bottom: 170px;
     text-align: center;
   }
+
+  .grid {
+    grid-gap: 10px;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+
+  .grid_item:last-child {
+    grid-column: auto/auto;
+    grid-row: auto/auto;
+  }
+
+  .h1 {
+    font-size: 22px;
+  }
 }
 
 @media all and (min-width: 500px) and (max-width: 750px) {
@@ -411,14 +425,14 @@ form {
   }
 }
 
-@media all and (max-width: 500px) {
-  .grid {
-    -ms-grid-columns: 1fr;
-    grid-template-columns: 1fr;
-  }
-}
-
 @media all and (max-width: 750px) {
+  .main_body {
+    position: relative;
+    padding: 0;
+    margin: 0 auto;
+    width: 90%;
+  }
+
   .grid {
     grid-gap: 10px;
   }
