--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,10 @@ button:visited {
   margin: 0 auto;
 }
 
+.skills_header {
+  margin-top: 60px;
+}
+
 .skill_flex {
   display: flex;
   align-items: center;
